--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -2,6 +2,17 @@
 ##############  Api ################
 ####################################
 
+[nfvo]
+ip = localhost
+port = 8080
+username = admin
+password = admin
+https = False
+
+####################################
+##############  Api ################
+####################################
+
 [api]
 port = 8080
 
