add openstack client for setting up the vim

--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -10,27 +10,12 @@ password = admin
 https = False
 
 ####################################
-##############  Api ################
-####################################
-
-[api]
-port = 8080
-
-####################################
 ###########  Messaging #############
 ####################################
 
 [messaging]
 bind_port = 50052
 
-####################################
-##############  DB #################
-####################################
-
-[database]
-url = sqlite:////tmp/experiment-manager.db
-show_sql = false
-drop_on_exit = true
 
 ####################################
 ############  system ###############
@@ -43,6 +28,8 @@ experiment_manager_port = 50051
 name = nfv-manager
 description = template manager
 ip = localhost
+openstack-credentials-file = /etc/softfire/openstack-credentials.json
+softfire-public-key = /etc/softfire/softfire-key.pem.pub
 
 ####################################
 ############  Logging ##############
