--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -30,6 +30,7 @@ description = template manager
 ip = localhost
 openstack-credentials-file = /etc/softfire/openstack-credentials.json
 softfire-public-key = /etc/softfire/softfire-key.pem.pub
+available-nsds-file-path = /etc/softfire/available-nsds.json
 
 ####################################
 ############  Logging ##############
