--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -47,7 +47,7 @@ keys = simpleFormatter,logfileformatter
 
 [logger_main]
 level = DEBUG
-qualname = eu.softfire.tub
+qualname = eu.softfire,org.openbaton,novaclient,sdk.softfire,keystoneclient,keystoneauth1
 handlers = consoleHandler,logfile
 propagate = 0
 
