--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -37,7 +37,7 @@ available-nsds-file-path = /etc/softfire/available-nsds.json
 ####################################
 
 [loggers]
-keys = root,main
+keys = root,main,ob,nova,key,sdk
 
 [handlers]
 keys = consoleHandler,logfile
@@ -47,7 +47,31 @@ keys = simpleFormatter,logfileformatter
 
 [logger_main]
 level = DEBUG
-qualname = eu.softfire,org.openbaton,novaclient,sdk.softfire,keystoneclient,keystoneauth1
+qualname = eu.softfire.nfv
+handlers = consoleHandler,logfile
+propagate = 0
+
+[logger_ob]
+level = DEBUG
+qualname = org.openbaton
+handlers = consoleHandler,logfile
+propagate = 0
+
+[logger_sdk]
+level = DEBUG
+qualname = sdk.softfire
+handlers = consoleHandler,logfile
+propagate = 0
+
+[logger_nova]
+level = DEBUG
+qualname = novaclient
+handlers = consoleHandler,logfile
+propagate = 0
+
+[logger_key]
+level = DEBUG
+qualname = keystoneauth1
 handlers = consoleHandler,logfile
 propagate = 0
 
