add db entities and method

--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -16,6 +16,18 @@ https = False
 [messaging]
 bind_port = 50052
 
+####################################
+############  Database #############
+####################################
+
+[database]
+url = sqlite:////tmp/nfv-manager.db
+# url = mysql://root:pwd@localhost/softfire
+show_sql = False
+# show_sql = True
+# drop_on_exit = True
+drop_on_exit = False
+
 
 ####################################
 ############  system ###############
