getting file location from config

--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -43,6 +43,7 @@ ip = localhost
 openstack-credentials-file = /etc/softfire/openstack-credentials.json
 softfire-public-key = /etc/softfire/softfire-key.pem.pub
 available-nsds-file-path = /etc/softfire/available-nsds.json
+temp-csar-location = /etc/softfire/experiment-nsd-csar
 
 ####################################
 ############  Logging ##############
