Imp: Make use of the sdk's feature to print the banner optionally

--- a/etc/nfv-manager.ini
+++ b/etc/nfv-manager.ini
@@ -44,6 +44,7 @@ openstack-credentials-file = /etc/softfire/openstack-credentials.json
 softfire-public-key = /etc/softfire/softfire-key.pem.pub
 available-nsds-file-path = /etc/softfire/available-nsds.json
 temp-csar-location = /etc/softfire/experiment-nsd-csar
+banner-file = /etc/softfire/banner-files/nfv-manager-banner.txt
 
 ####################################
 ############  Logging ##############
